# chatgpt_academic

./: check_proxy.py  config.py  main.py  pyproject.toml  toolbox.py
crazy_functions/: 解析项目源代码.py
request_llm/: bridge_tgui.py
