[tool.poetry]
name = "chatgpt-academic"
version = "0.1.0"
description = ""
authors = ["Dario Zhang <zdclink@gmail.com>"]
readme = "README.md"
packages = [{include = "chatgpt_academic"}]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
